# io-uring-http-server

./: Cargo.toml
public/: index.html
public/foo/: index.html
src/: eventfd.rs  http.rs  io_uring.rs  main.rs  request.rs  server.rs
