[package]
name = "io-uring-http-server"
version = "0.1.0"
publish = false
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
httparse = "1"
iou = { git = "https://github.com/withoutboats/iou", rev = "12484ce" }
libc = "0.2"
log = "0.4"
pretty_env_logger = "0.3"
